# wulfflow

./: .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: tests.yaml
about/: changelog.html  conduct.html  license.html
docs/: index.md
docs/documentation/: examples.md  overview.md
docs/installation/: install.md
documentation/: examples.html  overview.html
installation/: install.html
reference/: SUMMARY.html
reference/wulfflow/processing/: surface_energy.html  wulff_construction.html
reference/wulfflow/utils/: chempot.html  config.html  constants.html  utils.html
reference/wulfflow/workflow/: core.html  generator.html
search/: search_index.js  search_index.json
src/wulfflow/processing/: surface_energy.py  wulff_construction.py
src/wulfflow/utils/: __init__.py  chempot.py  config.py  constants.py  utils.py
src/wulfflow/workflow/: core.py  generator.py
