[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wulfflow"
description="A workflow for the generation of Wulff constructions using modern high-throughput methods"
version = "0.0.1"
readme = "README.md"
license = { text = "GNU GPL v3" }
authors = [
    { name = "Brad Ayers", email = "b.ayers@soton.ac.uk" },
    { name = "Davide Sarpa", email = "d.sarpa@soton.ac.uk" },
    { name = "Tom Demeyere", email = "tom.dmre@gmail.com" },
    { name = "Julian Holland", email = "holland@fhi.mpg.de" }
]
keywords = ["Wulff Construction", "Computational Chemistry", "Workflow Engines"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = ["numpy>=1.26.4,<=2.2.2", "ase>=3.24.0", "parsl>=2025.2.3", "quacc>=0.11.15", "pymatgen>=2025.1.24", "pandas>=2.2.3", "wulffpack>=1.3", "mp-api>=0.45.1"]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.9.4", "black>=25.1.0"]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.1"
]

[project.urls]
repository = "https://github.com/Surface-Tools/wulfflow"
documentation = "https://surface-tools.github.io/wulfflow/"
changelog = "https://github.com/Surface-Tools/wulfflow/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
wulfflow = ["py.typed"]

[tool.pyright]
include = ["wulfflow"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-p no:warnings", "--import-mode=importlib"]
xfail_strict = true
log_cli_level = "warn"
pythonpath = "src"
testpaths = ["tests"]

[tool.black]
exclude = '''
/(
    \.git
  | \.tox
)/
'''
skip-magic-trailing-comma = true

[tool.ruff]
lint.select = [
  "A",      # flake8-builtins
  "ARG",    # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle error
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "INT",    # flake8-gettext
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # numpy-specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T20",    # flake8-print
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "ASYNC1", # flake8-trio
  "UP",     # pyupgrade
  "W",      # pycodestyle warning
  "YTT",    # flake8-2020
]
lint.ignore = [
  "E501",   # Line too long
  "ISC001",   # single-line-implicit-string-concatenation
  "PERF203",  # try-except-in-loop
  "PLR",    # Design related pylint codes
  "PT004",  # Fixture does not return anything
  "PT011",  # pytest.raises
  "PT012",  # pytest.raises
  "RET505", # Unnecessary `elif` after `return`
]
src = ["src"]
lint.unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
lint.pydocstyle.convention = "numpy"
lint.isort.known-first-party = ["wulfflow"]
lint.isort.required-imports = ["from __future__ import annotations"]
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ANN", "ARG", "D", "E402", "PTH", "S101"]

[tool.docformatter]
pre-summary-newline = true
black = true

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
no_implicit_optional = false
disable_error_code = "annotation-unchecked"
